--- a/pages/addAdd/addAdd.wxss
+++ b/pages/addAdd/addAdd.wxss
@@ -1,7 +1,7 @@
 .container{
 	width: 100%;
 	min-height: 100vh;
-	padding: 0 28rpx;
+	padding: 0 28rpx 17rpx;
 	box-sizing: border-box;
 	background-color: #fff;
 	position: relative;
