--- a/pages/car/car.wxml
+++ b/pages/car/car.wxml
@@ -46,16 +46,16 @@
 		</view>	
 	</view>
 	<view class="vbottom" wx:if="{{goods.length!==0}}">
-		<view class="selecAll flex_1" bindtap="selecAll">
+		<view class="selecAll" bindtap="selecAll">
 			<view class="xuanze1 all {{all==true? 'xuanze2':''}}">
 				<icon  wx:if="{{all==true}}" type="success" size="12" color="#fe0042" />
 			</view>
 			全选
 		</view>
-		<view class="heji">
-			<view>合计:￥{{sum}}</view>
+		<view class="heji flex_1">
+			<view><text class="fz26">合计:</text>￥{{sum}}</view>
 			<view class="fz22 c9">不含运费</view>
 		</view>
-		<view class="jiesuan" bindtap="openOrder">去结算</view>
+		<view class="jiesuan" bindtap="openOrder">结算</view>
 	</view>
 </view>
