--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -42,14 +42,17 @@
 	<view class="list boxsiz dis_flex ais" bindtap="jump" data-url="/pages/goodsDetails/goodsDetails?shop_id=1">
 		<image class="shopimg" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1563874463694&di=f1313a20ae6905d950e3fb48bf30dacf&imgtype=0&src=http%3A%2F%2Fpic4.58cdn.com.cn%2Fzhuanzh%2Fn_v27fbe81b6f94548ce9fdac6489ffe3276.jpg%3Fw%3D750%26h%3D0"></image>
 		<view class="flex_1">
-			<view class="oh1 mb50 fwb c30 fz30">这里是运动鞋标题描述这里是运动鞋标题描述</view>
-			<view class="scx fz26 c3">原价 : {{filter.moneyFormat(1550)}}</view>
+			<view class="oh2 mb50 c30 fz30">这里是运动鞋标题描述这里是运动鞋标题描述</view>
+			
 			<view class="dis_flex ju_b aic w100">
-				<view class="cf33c7b fwb">
-					<text class="fz30">￥</text>
-					<text class="fz48">{{filter.moneyFormat(670)}}</text>
+				<view class="dis_flex aic">
+					<view class="cf33c7b fwb">
+						<text class="fz30">￥</text>
+						<text class="fz48">{{filter.moneyFormat(670)}}</text>
+					</view>
+					<view class="scx fz26 c9 ml10">￥{{filter.moneyFormat(1550)}}</view>
 				</view>
-				<view class="gobuy fwb">
+				<view class="gobuy">
 					立即抢购
 				</view>
 			</view>
