--- a/pages/OrderList/OrderList.wxml
+++ b/pages/OrderList/OrderList.wxml
@@ -36,16 +36,14 @@
 					<image src="{{filter.getgimg(item1.goods_img)}}"></image>
 				</view>
 				<view class="goodsInr">
-					<view class="fz28 c3 oh1"> 
-						{{idx0}}这里是运动鞋标题描述性文字……
-					</view>
+					<view class="fz28 c3 oh1">{{idx0}}这里是运动鞋标题描述性文字……</view>
 					
 					
 					<view class="fz26 c9 dis_flex ju_b">	
 						
 						<view class="dis_flex">
-							<text class="mb10">颜色：白色；</text> 
-							<text>尺码：43</text>
+							<text class="mb10">白色；</text> 
+							<text>43</text>
 							
 						</view>
 						<view>x1</view>
