--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -9,6 +9,10 @@
 	height: 230rpx;
 	margin-top: 100rpx;
 }
+image{
+	width: 100%;
+	height: 100%;
+}
 .abouttext{
 	font-size: 26rpx;
 	color: #333333;
