--- a/pages/addressEdit/addressEdit.wxml
+++ b/pages/addressEdit/addressEdit.wxml
@@ -3,11 +3,11 @@
 <form class="container" bindsubmit="formSubmit">
   <view class="addmsg">
 		<view class="msgtit">收货人</view>
-		<input class="msgsrk" name="name" value="{{editaddress.name}}" type="text" placeholder="请填写收货人姓名"/>
+		<input class="msgsrk" name="name" value="{{editaddress.user_name}}" type="text" placeholder="请填写收货人姓名"/>
 	</view>
   <view class="addmsg">
 		<view class="msgtit">手机号码</view>
-		<input class="msgsrk" name="tel" value="{{editaddress.mobile}}" type="text" placeholder="请填写收货人手机号码"/>
+		<input class="msgsrk" name="tel" value="{{editaddress.phone}}" type="text" placeholder="请填写收货人手机号码"/>
 	</view>
   
 	 <picker class="addmsg"
@@ -20,7 +20,7 @@
 			<view class="msgtit">所在地区</view>
 			<input class="msgsrk" name="address"
 			 type="text" placeholder="请选择地区"
-			 value="{{region[0]}}{{region[1]}}{{region[2]}}" disabled/>
+			 value="{{region[0]}} {{region[1]}} {{region[2]}}" disabled/>
 		</view>
   </picker>
   <view class="addmsg">
@@ -29,7 +29,7 @@
 	</view>
   <view class="addmsg">
 		<view class="">设置默认地址</view>
-		<switch checked="{{moren==1}}" class="mrdz" bindchange="switch1Change" color="#f22f5a"/>
+		<switch checked="{{editaddress.is_default==1}}" class="mrdz" bindchange="switch1Change" color="#f75852"/>
 		<input hidden type="text" name="moren"  value="{{moren}}"/>
 	</view>
 	<!-- <view class="definebtn">保存</view> -->
