--- a/pages/car/car.wxss
+++ b/pages/car/car.wxss
@@ -77,6 +77,7 @@ page{
 .goodsname{
 	font-size: 30rpx;
 	color: #333333;
+	padding-right: 20rpx;
 	margin-bottom: 20rpx;
 	box-sizing: border-box;
 	display:-webkit-box !important;  
