--- a/utils/pageState/index.wxss
+++ b/utils/pageState/index.wxss
@@ -4,13 +4,13 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  height: 100%;
+  height: 60vh;
   width: 100%;
 }
 
 .page-state-container {
   animation: fadein 2s 1 ease-out;
-  height: 100%;
+  height: 60vh;
   width: 100%;
 }
 
@@ -19,7 +19,7 @@
 }
 
 page {
-  height: 100%;
+  min-height: 100%;
   overflow-y: auto;
 }
 .pstatemessage{
@@ -27,5 +27,12 @@ page {
 	line-height: 140rpx;
 }
 .retrybtn{
+	width: 100px;
+	height: 50px;
+	background: #f75852;
+	border-radius: 10rpx;
 	font-size: 28rpx;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
